add : secondaryBgColor variable

--- a/src/reusables/designSystem/theme.scss
+++ b/src/reusables/designSystem/theme.scss
@@ -1,3 +1,4 @@
 $textColor: rgb(246, 246, 246);
 $primaryTextColor: rgb(255, 225, 105);
 $primaryBgColor: rgb(33, 28, 53);
+$secondaryBgColor: rgb(53, 48, 71);
