--- a/src/reusables/designSystem/theme.scss
+++ b/src/reusables/designSystem/theme.scss
@@ -2,3 +2,5 @@ $textColor: rgb(246, 246, 246);
 $primaryTextColor: rgb(255, 225, 105);
 $primaryBgColor: rgb(33, 28, 53);
 $secondaryBgColor: rgb(53, 48, 71);
+$btnColor: rgb(66, 48, 128);
+$btnColorHover: rgb(96, 77, 164);
