--- a/src/reusables/designSystem/theme.scss
+++ b/src/reusables/designSystem/theme.scss
@@ -4,3 +4,56 @@ $primaryBgColor: rgb(33, 28, 53);
 $secondaryBgColor: rgb(53, 48, 71);
 $btnColor: rgb(66, 48, 128);
 $btnColorHover: rgb(96, 77, 164);
+$linkColor: rgb(133, 112, 207);
+
+/* ==== Responsive Breakpoints ==== **/
+
+//Small smartphones
+$screen-xs-min: 100px;
+
+// Small tablets and large smartphones (landscape view)
+$screen-sm-min: 378px;
+
+// Small tablets (portrait view)
+$screen-md-min: 768px;
+
+// Tablets and small desktops
+$screen-lg-min: 992px;
+
+// Large tablets and desktops
+$screen-xl-min: 1200px;
+
+// Extra Small devices
+@mixin xs {
+  @media (min-width: #{$screen-xs-min}) {
+    @content;
+  }
+}
+
+// Small devices
+@mixin sm {
+  @media (min-width: #{$screen-sm-min}) {
+    @content;
+  }
+}
+
+// Medium devices
+@mixin md {
+  @media (min-width: #{$screen-md-min}) {
+    @content;
+  }
+}
+
+// Large devices
+@mixin lg {
+  @media (min-width: #{$screen-lg-min}) {
+    @content;
+  }
+}
+
+// Extra large devices
+@mixin xl {
+  @media (min-width: #{$screen-xl-min}) {
+    @content;
+  }
+}
