--- a/src/pages/PokemonDetail/PokemonDetail.module.scss
+++ b/src/pages/PokemonDetail/PokemonDetail.module.scss
@@ -8,7 +8,15 @@
   padding: 2rem;
   gap: 2rem;
 
+  @include xs {
+    flex-direction: column;
+  }
+
   @include sm {
+    flex-direction: column;
+  }
+
+  @include md {
     flex-direction: column;
   }
 
@@ -47,7 +55,7 @@
     gap: 2rem;
 
     @include sm {
-      flex: auto;
+      flex: 1;
     }
 
     @include lg {
